interactive README core updates

--- a/readme-examples/index.html
+++ b/readme-examples/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<textarea id="data" onchange="localStorage.setItem('data',event.target.value)"></textarea>
+<textarea style="width:100%" id="data" onchange="localStorage.setItem('data',event.target.value)"></textarea>
 <script>
 const data = {name:"joe",children:[{name:"janet",age:5},{name:"jon",age:10},{name:"mary"}]};
 document.getElementById("data").value = JSON.stringify(data);
